	  is filled.
	  https://github.com/royhills/arp-scan/pull/172

	* Update copyright date for applicable files.
	  https://github.com/royhills/arp-scan/pull/173

	* ieee-oui.txt: Updated from IEEE registry. Total of 50366 MAC/Vendor
	  mappings (4575 IAB + 5121 MAM + 34879 OUI + 5791 OUI36).
	  https://github.com/royhills/arp-scan/pull/174

2023-10-22 Roy Hills <royhills@hotmail.com>

	* TODO: Moved all valid items from TODO to github issue with the
	  "From TODO file" label. Obsolete items removed. Note added
	  to indicate that the file is no longer used.
	  https://github.com/royhills/arp-scan/pull/169

	* ieee-oui.txt: Updated from IEEE registry. Total of 49762 MAC/Vendor
	  mappings.
	  https://github.com/royhills/arp-scan/pull/170

2023-03-09 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Don't display the localnet info ("Target list from
	  interface: network X netmask Y") if the --plain option is given.
	  https://github.com/royhills/arp-scan/issues/158

2023-03-09 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, arp-scan.h, arp-scan.1.dist: Added the ${IPnum} output
	  field, which displays the host IPv4 address as a 32-bit integer.
	  This permits sorting by IP address using simple numeric comparison.
	  Thanks to @gspannu for the feature request.
	  https://github.com/royhills/arp-scan/issues/156

2023-02-26 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Change the informational message about the interface
	  network and netmask used to generate the target list when
	  --localnet is used, and always display this message (previously
	  it was only displayed if --verbose was given).

2023-02-25 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Always warn if remove_host() is called on a non-live
	  host. This should never happen since the changes detailed in
	  github issue #67.

	* wrappers.c, utils.c: Move my_lookupdev() function from wrappers.c
	  to utils.c where it belongs.

2023-02-18 Roy Hills <royhills@hotmail.com>
